--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="
-      default-src
-      'unsafe-eval' 'unsafe-inline' 'self'
-      d2wy8f7a9ursnm.cloudfront.net
-      ws://localhost:1234
-      *.doubleclick.net
-      *.giphy.com
-      api.github.com
-      api.npmjs.org
-      api.npms.io
-      bundlephobia.com
-      cdnjs.cloudflare.com
-      fonts.googleapis.com
-      fonts.gstatic.com
-      notify.bugsnag.com
-      registry.npmjs.org
-      sessions.bugsnag.com
-      unpkg.com
-      www.google-analytics.com
-      www.googletagmanager.com
-      www.gravatar.com
-      blob:
-      "><meta name="description" content="Graph / visualize of npm dependencies"><meta name="keywords" content="visualize, visualization, graph, npm, npm modules, npm graph, npm licenses"><link rel="icon" type="image/png" href="/favicon.7a39e111.ico"><link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Material+Icons" rel="stylesheet"><link href="/index.50af8562.css" rel="stylesheet"><title>npmgraph - Visualize npm Module Dependencies</title></head><body> <div id="app"> <script src="https://d2wy8f7a9ursnm.cloudfront.net/v5/bugsnag.min.js"></script>  <script src="https://www.googletagmanager.com/gtag/js?id=UA-6434483-2"></script> <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],window.GA_TRACKING_ID="UA-6434483-2",gtag("js",new Date),gtag("config",window.GA_TRACKING_ID);</script> <script type="module" src="/index.0c2e9483.js"></script> </div></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><link rel="icon" type="image/png" href="/favicon.7a39e111.ico"><link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Material+Icons" rel="stylesheet"><link href="/index.50af8562.css" rel="stylesheet"><title>npmgraph - Visualize npm Module Dependencies</title></head><body> <div id="app"> <script src="https://d2wy8f7a9ursnm.cloudfront.net/v5/bugsnag.min.js"></script> <script type="module" src="/index.0c2e9483.js"></script> </div></body></html>
