--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><link rel="icon" type="image/png" href="/favicon.7a39e111.ico"><link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Material+Icons" rel="stylesheet"><link href="/index.50af8562.css" rel="stylesheet"><title>npmgraph - Visualize npm Module Dependencies</title></head><body> <div id="app"> <script src="https://d2wy8f7a9ursnm.cloudfront.net/v5/bugsnag.min.js"></script> <script type="module" src="/index.0c2e9483.js"></script> </div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/npmGraph/favicon.7a39e111.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Material+Icons" rel="stylesheet">
+    <link href="/npmGraph/index.50af8562.css" rel="stylesheet">
+    <title>npmGraph</title>
+</head>
+
+<body>
+    <div id="app">
+        <script src="https://d2wy8f7a9ursnm.cloudfront.net/v5/bugsnag.min.js"></script>
+        <script type="module" src="/npmGraph/index.0c2e9483.js"></script>
+    </div>
+</body>
+
+</html>
